--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,12 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
+
 
 android {
     namespace "com.example.expense"
@@ -54,18 +60,28 @@ android {
 //        targetSdkVersion flutter.targetSdkVersion
 //        versionCode flutterVersionCode.toInteger()
 //        versionName flutterVersionName
-        applicationId "com.example.expense"
+        applicationId "com.sms.expense"
         minSdkVersion 23
         targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
 
+       signingConfigs {
+              release {
+                      keyAlias keystoreProperties['keyAlias']
+                       keyPassword keystoreProperties['keyPassword']
+                       storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+                       storePassword keystoreProperties['storePassword']
+                   }
+           }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            // Signing with the debug keys for now,
+            // so `flutter run --release` works.
+                     signingConfig signingConfigs.debug
+                      signingConfig signingConfigs.release
         }
     }
     lintOptions {
